fixed spacing and alignment issues

--- a/css/general.css
+++ b/css/general.css
@@ -263,7 +263,6 @@ ul#nav-list li a:active {
 	padding-bottom: 25px;
 	border-bottom: 1px solid white;
 	text-align: center;
-	width: 75%;
 	display: inline-block;
 }
 
@@ -278,11 +277,10 @@ ul#nav-list li a:active {
 	color: rgba(180,214,193,1);
 	margin-bottom: 0;
 	padding-bottom: 2em;
-	pa
 }
 
 .email{
-	padding-bottom: 0;
+	padding-bottom: .5em;
 	margin-bottom: 0;
 }
 
@@ -430,11 +428,6 @@ h1{
 .my-photos{
 	max-width: 500px;
 	margin: 0 auto;
-}
-
-
-.contact-section h2{
-	width: 56%;
 }
 
 }
